entity_macros/tests/ui/derive/ent/missing-type-for-edge-attr-with-no-inner.stderr
error: Edge attribute is missing type
  --> $DIR/missing-type-for-edge-attr-with-no-inner.rs:17:11
   |
17 |     #[ent(edge)]
   |           ^^^^
